--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="pt">
 
 <head>
-
+<link rel="icon" href="https://www.cpdverificationservice.com/uploads/1/2/6/8/126857925/cropped-cpd-logo-clear-1.png">
 <meta charset="UTF-8">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
