--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ button:hover {background-color: #ffa64d;}
 
 <div id="telegramScreen" class="hidden" style="text-align: center;">
 
-  <img src="https://static.vecteezy.com/system/resources/previews/023/741/064/original/telegram-logo-icon-social-media-icon-free-png.png" alt="Descrição da Imagem" style="max-width:100px; height:auto; margin-top: 20px;">
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRTKAE2op_kK1kSFn6jgPEeBIE7phPDgknJVxavcNRAFw&s" alt="Descrição da Imagem" style="max-width:100px; height:auto; margin-top: 20px;">
 
 
 
