--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <button type="submit" class="sm-btn sm-btn--primary">Enviar</button>
             </div>
             <div class="sm-branding-footer">
-                <a href="https://sheetmonkey.io/form-builder?ref=form" target="_blank">🐵 Feito com Sheet Monkey</a>
+                <a href="https://ig.me/m/joab_sm" target="_blank">🤠 Joab mota</a>
             </div>
         </div>
     </form>
