--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
   <button class="button maestro" onclick="showMaestroOptions()"><i class="fa fa-apple"></i>Maestro IPhone</button>
   <button class="button admin" onclick="showAdmOptions()"><i class="fa fa-apple"></i>ADMI</button>
 
+         <div class="sm-branding-footer">
+<a href="https://ig.me/m/joab_sm" target="_blank">🤠 Feito por Joab mota</a>
+</div>
 </div>
 
 <div id="whatsAppScreen" class="hidden" style="text-align: center;">
