--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <button type="submit" class="sm-btn sm-btn--primary">Enviar</button>
             </div>
             <div class="sm-branding-footer">
-                <a href="https://ig.me/m/joab_sm" target="_blank">🤠 Joab mota</a>
+                <a href="https://ig.me/m/joab_sm" target="_blank">🤠 Feito por Joab mota</a>
             </div>
         </div>
     </form>
