--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>SUPORTE CPD</title>
 <!-- Inclua a biblioteca Font Awesome para os ícones -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
 <!-- Adicionei uma fonte mais moderna -->
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 
@@ -22,14 +23,16 @@
 <div id="mainScreen" class="mainScreen" style="text-align: center;"> <!-- Adicionei a classe mainScreen -->
   <img src="https://www.cpdverificationservice.com/uploads/1/2/6/8/126857925/cropped-cpd-logo-clear-1.png" alt="Descrição da Imagem" style="max-width:100px; height:auto; margin-top: 20px;">
 
-  <h1>Soluções e Suporte</h1>
-  <button class="button whatsapp" onclick="showWhatsAppOptions()"><i class="fa fa-whatsapp"></i>WhatsApp</button>
-  <button class="button telegram" onclick="showTelegramOptions()"><i class="fa fa-telegram"></i>Telegram</button>
-  <button class="button form" onclick="showFormOptions()"><i class="fa fa-wpforms"></i> Formulário</button>
-  <button class="button maestro" onclick="showMaestroOptions()"><i class="fa fa-apple"></i>Maestro IPhone</button>
-  <button class="button admin" onclick="showAdmOptions()"><i class="fa fa-apple"></i>ADMI</button>
+ <h1>Suporte</h1>
+  <button class="button whatsapp" onclick="showWhatsAppOptions()"><i class="fab fa-whatsapp"></i>WhatsApp</button>
+  <button class="button telegram" onclick="showTelegramOptions()"><i class="fab fa-telegram"></i>Telegram</button>
+  <button class="button form" onclick="showFormOptions()"><i class="fab fa-wpforms"></i> Formulário</button>
+  <button class="button maestro" onclick="showMaestroOptions()"><i class="fab fa-apple"></i>Maestro IPhone</button>
+  <button class="button admin" onclick="showAdmOptions()"><i class="fab fa-apple"></i>ADMI</button>
+   <h4>formulario de termo</h4>
+   <button class="button coletor"onclick="redirectToLink('https://joabsm.github.io/coletor/')"><i class="fas fa-list-check" style="color: #FFD43B;"></i>Ass: Coletores</button>
 
-         <div class="sm-branding-footer">
+<div class="sm-branding-footer">
 <a href="https://ig.me/m/joab_sm" target="_blank">🤠 Feito por Joab mota</a>
 </div>
 </div>
@@ -38,10 +41,10 @@
 <img src="https://portais.univasf.edu.br/programadegestao/imagens/icon-whatsapp.png/@@images/image.png" alt="Descrição da Imagem" style="max-width:100px; height:auto; margin-top: 20px;">
 
   <h2>Contato WhatsApp</h2>
-  <button class="button whatsapp"onclick="redirectToLink('https://centraldeatendimento.totvs.com/hc/article_attachments/360047086133/mceclip0.png')"><i class="fa fa-whatsapp"></i>JONILSON</button>
-  <button class="button whatsapp"onclick="redirectToLink('')"><i class="fa fa-whatsapp"></i>MATEUS</button>
-  <button class="button whatsapp"onclick="redirectToLink('https://api.whatsapp.com/send?phone=5599984395154')"><i class="fa fa-whatsapp"></i>JOAB</button>
-  <button class="button whatsapp"onclick="redirectToLink('')"><i class="fa fa-whatsapp"></i>EDI</button>
+  <button class="button whatsapp"onclick="redirectToLink('https://centraldeatendimento.totvs.com/hc/article_attachments/360047086133/mceclip0.png')"><i class="fab fa-whatsapp"></i>JONILSON</button>
+  <button class="button whatsapp"onclick="redirectToLink('')"><i class="fab fa-whatsapp"></i>MATEUS</button>
+  <button class="button whatsapp"onclick="redirectToLink('https://api.whatsapp.com/send?phone=5599984395154')"><i class="fab fa-whatsapp"></i>JOAB</button>
+  <button class="button whatsapp"onclick="redirectToLink('')"><i class="fab fa-whatsapp"></i>EDI</button>
   <button onclick="goBack('whatsAppScreen')">Voltar</button>
 </div>
 
@@ -49,10 +52,10 @@
   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRTKAE2op_kK1kSFn6jgPEeBIE7phPDgknJVxavcNRAFw&s" alt="Descrição da Imagem" style="max-width:100px; height:auto; margin-top: 20px;">
 
   <h2>Contato Telegram</h2>
-  <button class="button telegram"onclick="redirectToLink('')"><i class="fa fa-telegram"></i>JONILSON</button>
-  <button class="button telegram"onclick="redirectToLink('https://t.me/mateusmaya')"><i class="fa fa-telegram"></i>MATEUS</button>
-  <button class="button telegram"onclick="redirectToLink('https://t.me/Joab_Mota')"><i class="fa fa-telegram"></i>JOAB</button>
-  <button class="button telegram"onclick="redirectToLink('https://t.me/pioedi')"><i class="fa fa-telegram"></i>EDI</button>
+  <button class="button telegram"onclick="redirectToLink('')"><i class="fab fa-telegram"></i>JONILSON</button>
+  <button class="button telegram"onclick="redirectToLink('https://t.me/mateusmaya')"><i class="fab fa-telegram"></i>MATEUS</button>
+  <button class="button telegram"onclick="redirectToLink('https://t.me/Joab_Mota')"><i class="fab fa-telegram"></i>JOAB</button>
+  <button class="button telegram"onclick="redirectToLink('https://t.me/pioedi')"><i class="fab fa-telegram"></i>EDI</button>
   <button onclick="goBack('telegramScreen')">Voltar</button>
 </div>   
 
