--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <button class="button telegram" onclick="showTelegramOptions()"><i class="fab fa-telegram"></i>Telegram</button>
   <button class="button form" onclick="showFormOptions()"><i class="fab fa-wpforms"></i> Formulário</button>
   <button class="button maestro" onclick="showMaestroOptions()"><i class="fab fa-apple"></i>Maestro IPhone</button>
-  <button class="button admin" onclick="showAdmOptions()"><i class="fab fa-apple"></i>ADMI</button>
+  <button class="button admin" onclick="showAdmOptions()"><i class="fa-solid fa-lock fa-beat-fade"></i>ADMI</button>
    <h4>formulario de termo</h4>
    <button class="button coletor"onclick="redirectToLink('https://joabsm.github.io/coletor/')"><i class="fas fa-list-check" style="color: #FFD43B;"></i>Ass: Coletores</button>
 
